--- a/style.css
+++ b/style.css
@@ -32,14 +32,6 @@ html {
     line-height: 2rem;
 }
 
-
-
-
-
-
-
-/*link style*/
-
 .top-nav a {
     float: left;
     display: block;
@@ -49,14 +41,6 @@ html {
     text-decoration: none;
     font-size: 1.4rem;
 }
-
-
-
-
-
-
-
-/*text color when hover*/
 
 .top-nav a:hover {
     background-color: #576872;
@@ -186,25 +170,22 @@ div.sub-skill {
     margin: 0;
     padding: 0;
 }
-.project-title{
-    align-items: left;
-    margin-top: 0px;
+.project-title {
+    flex-direction: row;
     overflow: hidden;
-    height: 6rem;
-    margin-bottom: 10px;
-    border-bottom:solid grey .1rem;
+   /* height: 6rem;*/
+    border-bottom: solid grey .1rem;
     background-color: transparent;
 }
-.project-title h1{
-    margin-top: 36px;
-    margin-left: 22%;
-    color:Maroon;
+
+.project-title h1 {
+    margin: 0 auto;
+    color: Maroon;
     font-size: 4rem;
     text-align: center;
     text-transform: uppercase;
     font-weight: 600;
     letter-spacing: .1rem;
-
 }
 
 div .container.portafolio {
@@ -212,12 +193,8 @@ div .container.portafolio {
     width: 100%;
 }
 
-/*div.container.portafolio div:nth-child(1){
-    background-color: rgba(204,204,255,0.2);
-    margin-left: outset black .4rem;
-}*/
-div.container.portafolio div:nth-child(odd){
-   background-color: rgba(255,204,204,0.1);
+div.container.portafolio div:nth-child(odd) {
+    background-color: rgba(255, 204, 204, 0.1);
 }
 
 
@@ -227,10 +204,12 @@ div.project {
     height: 20rem;
     margin-left: 10px;
 }
-.project img{
+
+.project img {
     width: 30px;
     margin-bottom: 0px;
 }
+
 .project h1 {
     font-size: 1rem;
     font-weight: 400;
@@ -260,12 +239,69 @@ div.project {
     margin-top: 10px;
 }
 
-.contact{
-    
+.contact {
+    height: 15rem;
+    background-color: black;
+    color: white;
+    overflow: hidden;
 }
 
+.contact h1 {
+    margin-top: 30px;
+    width: 100%;
+    font-size: 4rem;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: .1rem;
+}
 
-/*disappear ipad / iphone content for desktop desing */
+.contact h2 {
+    font-size: 1rem;
+    font-variant: small-caps;
+    font-weight: 200;
+    letter-spacing: .1rem;
+    margin-top: -25px;
+}
+
+.project-modal{
+    display: none;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+.modal-content{
+    background-color: white;
+    margin: 15% auto;
+    padding: 20px;
+    border-style: solid black .2rem;
+    width: 80%;
+}
+.close{
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+.front-end{
+    display: none;
+}
+.full-stack{
+    display: none;
+}
+
+.react{
+    display: none;
+}
+.express{
+    display: none;
+}
 
 @media screen and (max-width: 768px) {
     .top-nav a:not(:first-child) {
@@ -311,12 +347,7 @@ div.project {
         width: 24.5%;
         margin-left: 1px;
     }
-    .project-title h1{
-        margin-left: 20%;
-    }
 }
-
-
 
 @media only screen and (min-device-pixel-ratio: 1.5)(-o-min-device-pixel-ratio: 3/2),
 (-webkit-min-device-pixel-ratio: 1.5),
