--- a/style.css
+++ b/style.css
@@ -281,8 +281,11 @@ div.project {
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 .modal-content{
-    position: relative;
     background-color: white;
+    display: scroll;
+    overflow: auto;
+    width: 80%;
+    height:43rem;
     margin: 15% auto;
     padding: 20px;
     border-style: solid black .2rem;
