--- a/style.css
+++ b/style.css
@@ -269,19 +269,22 @@ div.project {
 }
 
 .project-modal{
-    display: none;
     position: fixed;
     z-index: 1;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 0;
     height: 100%;
     overflow: auto;
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+    overflow-x: hidden;
+    transition: 0.5s;
+
 }
 .modal-content{
     background-color: white;
+    position: relative;
     display: scroll;
     overflow: auto;
     width: 80%;
