--- a/style.css
+++ b/style.css
@@ -311,7 +311,8 @@ div.project {
 .close{
     color: #aaa;
     float: right;
-    font-size: 28px;
+    margin-right: 5%;
+    font-size: 5rem;
     font-weight: bold;
 }
 .front-end{
