--- a/style.css
+++ b/style.css
@@ -412,6 +412,10 @@ background-color:black;
         width: 24.5%;
         margin-left: 1px;
     }
+    .close{
+        margin-right: 10%;
+        font-size: 5rem;
+    }
 }
 
 @media only screen and (min-device-pixel-ratio: 1.5)(-o-min-device-pixel-ratio: 3/2),
