--- a/style.css
+++ b/style.css
@@ -273,8 +273,8 @@ div.project {
     z-index: 1;
     top: 0;
     left: 0;
-    display: none;
-    width: 100%;
+   /* display: none;*/
+    width: 0%;
     height: 100%;
     overflow: auto;
     background-color: rgb(0,0,0);
