--- a/style.css
+++ b/style.css
@@ -309,7 +309,7 @@ div.project {
     margin-bottom: 3rem;
 }
 .close{
-    color: #aaa;
+    color: WhiteSmoke;
     float: right;
     margin-right: 5%;
     font-size: 5rem;
