--- a/style.css
+++ b/style.css
@@ -444,6 +444,9 @@ embed{
         font-size: 5rem !important;
         ;
     }
+    embed{
+        width: 200px;
+    }
 }
 
 @media only screen and (min-device-pixel-ratio: 1.5)(-o-min-device-pixel-ratio: 3/2),
