--- a/style.css
+++ b/style.css
@@ -58,10 +58,12 @@ html {
 }
 
 .main h2 {
+    width: 30%;
+    text-align: center;
     border-bottom: solid Silver .1rem;
     font-variant: small-caps;
     margin-bottom: 0px;
-    letter-spacing: .2rem;
+    letter-spacing: .5rem;
     line-height: 3rem;
     font-weight: 400;
 }
@@ -96,25 +98,6 @@ span .container {
     display: inline-flex;
 }
 
-.left span h1 {
-    width: 20%;
-    margin-top: 3rem;
-    margin-left: 2rem;
-    font-variant: small-caps;
-    font-size: 1.5rem;
-    font-weight: 800;
-    margin-bottom: 0px;
-    letter-spacing: .2rem;
-    border-bottom: solid LightGrey .1rem;
-}
-
-.left span p {
-
-    float: left;
-    width: 50%;
-    margin-left: 4rem;
-    font-size: 1.2rem;
-}
 
 div.left {
     width: 100%;
@@ -140,13 +123,7 @@ h1 {
     margin-top: 0px;
 }
 
-div.container.brief {
-    width: 100%;
-    height: 100px;
-    margin-left: 10px;
-    margin-top: 2rem;
-    flex-direction: row;
-}
+
 
 .brief button {
     background-color: transparent;
@@ -157,11 +134,13 @@ div.container.brief {
     font-variant: small-caps;
     flex-direction: row;
     width: 100%;
-    margin-left: 20px;
+    height: 40rem;
+    background-color: white;
 }
 
 .skill div:nth-child(even) {
-    background-color: black;
+    background-color: white;
+    color: black;
     text-align: center;
     font-size: .9rem;
 }
@@ -253,28 +232,40 @@ div.project {
 }
 
 .contact {
-    height: 15rem;
+    margin-top: 20px;
+    height: 38.2rem;
     background-color: black;
     color: white;
     overflow: hidden;
 }
+.contact img{
+    margin-top: 20px;
+    width: 50%;
+}
+
+div.container.brief {
+    width: 100%;
+    height: 100px;
+    flex-direction: row;
+}
+.contact span p{
+    width: 80%;
+    font-variant: small-caps;
+    font-size: 1.2rem;
+    font-weight: 200;
+    margin-bottom: 0px;
+    letter-spacing: .2rem;
+    text-align: center;
+}
 
 .contact h1 {
-    margin-top: 30px;
+    margin-top: 20px;
     width: 100%;
     font-size: 4rem;
     text-align: center;
     text-transform: uppercase;
     font-weight: 600;
     letter-spacing: .1rem;
-}
-
-.contact h2 {
-    font-size: 1rem;
-    font-variant: small-caps;
-    font-weight: 200;
-    letter-spacing: .1rem;
-    margin-top: -25px;
 }
 
 .project-modal {
@@ -439,6 +430,10 @@ embed{
     div.container.project {
         width: 24.5%;
         margin-left: 1px;
+    }
+
+    .main h2{
+        width: auto;
     }
     .close {
         margin-right: 10%!important;
