--- a/style.css
+++ b/style.css
@@ -51,14 +51,15 @@ html {
     display: none;
 }
 
-.main {
+#main {
     height: 46rem;
     flex-direction: column;
     background-color: white;
+    background-size:cover;
+    
 
 }
-
-.main h2 {
+#main h2 {
     width: 30%;
     text-align: center;
     border-bottom: solid Silver .1rem;
@@ -69,7 +70,7 @@ html {
     font-weight: 400;
 }
 
-.main h1 {
+#main h1 {
     font-variant: small-caps;
     font-weight: 300;
     line-height: 2rem;
@@ -78,11 +79,11 @@ html {
     margin-bottom: -10px;
 }
 
-.main .grayscale { 
+#main .grayscale { 
     filter: invert(79%); 
 }
 
-.main button {
+#main button {
     width: 15rem;
     height: 50px;
     background: none;
