--- a/style.css
+++ b/style.css
@@ -1,477 +1,528 @@
-/*style of top nav */
+    * {
+        margin: 0;
+        padding: 0;
+        border: 0;
+    }
 
-* body {
-    margin: 0;
-    padding: 0;
-}
 
-html {
-    font-size: 14px;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
+    html {
+        font: 14px;
+        font-family: 'Concert One', cursive;
+        font-weight: 400;
+        background-color: white;
+        font-variant: small-caps;
+    }
 
-.wrap {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-}
+    .wrap {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
 
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-}
+    .container {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+    }
 
-.top-nav {
-    background-color: black;
-    overflow: hidden;
-    font-style: normal;
-    font-variant: small-caps;
-    font-weight: 100;
-    line-height: 2rem;
-}
+    div #myTopNav.topNav {
+        z-index: 99;
+    }
 
-.top-nav a {
-    float: left;
-    display: block;
-    color: #FBFFFE;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 1.4rem;
-}
+    .top-nav {
+        background-color: transparent;
+        position: fixed;
+        width: 100%s;
+        height: 5rem;
+        overflow: hidden;
+        font-style: normal;
+        font-variant: small-caps;
+        font-weight: 100;
+        line-height: 2rem;
+    }
 
-.top-nav a:hover {
-    background-color: #576872;
-    color: #EDEFF2;
-}
+    .top-nav a {
+        float: right;
+        display: block;
+        margin-right: 3rem;
+        color: black;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 1.4rem;
+    }
 
-.top-nav .icon {
-    display: none;
-}
+    div.icon {
+        display: none;
+    }
+    /*parallax*/
 
-#main {
-    height: 46rem;
-    flex-direction: column;
-    background-color: white;
-    background-size:cover;
-    
+    #parallax {
+        background-image: url(background.png);
+        background-size: cover;
+        height: 42rem;
+    }
+    /*main container*/
 
-}
-#main h2 {
-    width: 30%;
-    text-align: center;
-    border-bottom: solid Silver .1rem;
-    font-variant: small-caps;
-    margin-bottom: 0px;
-    letter-spacing: .5rem;
-    line-height: 3rem;
-    font-weight: 400;
-}
+    #main {
+        flex-direction: column;
+        background-size: cover;
+    }
 
-#main h1 {
-    font-variant: small-caps;
-    font-weight: 300;
-    line-height: 2rem;
-    margin-top: .3rem;
-    color: Maroon;
-    margin-bottom: -10px;
-}
-
-#main .grayscale { 
+    #main .grayscale { 
     filter: invert(79%); 
 }
 
-#main button {
-    width: 15rem;
-    height: 50px;
-    background: none;
-    color: Grey;
-    font-variant: small-caps;
-    font-weight: 400;
-    margin-bottom: 0px;
-    letter-spacing: .2rem;
-    border: solid LightGrey .3rem;
-}
-section{
-    opacity: 0;
-    transition: opacity 1s;
-}
-
-section.visible {
-    opacity: 1;
-}
-
-div .container.skills {
-    flex-direction: row;
-    align-items: baseline;
-    overflow: hidden;
-}
-
-span .container {
-    flex-direction: row;
-    display: inline-flex;
-}
-
-
-div.left {
-    width: 100%;
-    flex-direction: column;
-    padding-bottom: 2rem;
-    background-color: black;
-    float: left;
-    color: white;
-}
-
-.left p,
-h1 {
-    width: 80%;
-    margin-top: 4rem;
-    text-align: center;
-    font-variant: small-caps;
-    font-weight: 200;
-    margin-bottom: 0px;
-    letter-spacing: .1rem;
-}
-
-.left h1 {
-    margin-top: 0px;
-}
-
-
-
-.brief button {
-    background-color: transparent;
-    border: none;
-}
-
-.skill {
-    font-variant: small-caps;
-    flex-direction: row;
-    width: 100%;
-    height: 40rem;
-    background-color: white;
-    margin-bottom: 3rem;
-}
-
-.skill div:nth-child(even) {
-    background-color: white;
-    color: black;
-    text-align: center;
-    font-size: .9rem;
-}
-
-div.sub-skill {
-    background-color: Maroon;
-    align-items: center;
-    width: 40%;
-    height: 100px;
-    color: white;
-    margin-top: 10px;
-}
-
-.sub-skill ul {
-    list-style: none;
-    list-style-position: inside;
-    margin: 0;
-    padding: 0;
-}
-
-.project-title {
-    flex-direction: row;
-    overflow: hidden;
-    /* height: 6rem;*/
-    border-bottom: solid grey .1rem;
-    background-color: transparent;
-}
-
-.project-title h1 {
-    margin: 0 auto;
-    color: Maroon;
-    font-size: 4rem;
-    text-align: center;
-    text-transform: uppercase;
-    font-weight: 600;
-    letter-spacing: .1rem;
-}
-
-div .container.portafolio {
-    flex-direction: row;
-    width: 100%;
-     height: 46rem;
-}
-
-div.container.portafolio div:nth-child(odd) {
-    background-color: rgba(255, 204, 204, 0.1);
-}
-
-
-div.project {
-    flex-direction: column;
-    width: 23%;
-    height: 30rem;
-    margin-left: 10px;
-}
-
-.project img {
-    width: 30px;
-    margin-bottom: 0px;
-}
-
-.project h1 {
-    font-size: 1rem;
-    font-weight: 400;
-    height: 20px;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    text-transform: uppercase;
-}
-
-.project p {
-    width: 80%;
-    height: 50px;
-    margin-bottom: 40px;
-    font-size: .9rem;
-    text-align: center;
-    font-variant: small-caps;
-    font-weight: 200;
-    letter-spacing: .1rem;
-}
-
-.project button {
-    background-color: transparent;
-    border-radius: 80%;
-    width: 30px;
-    height: 30px;
-    border-style: solid black 3rem;
-    margin-top: 40px;
-}
-
-.contact {
-    margin-top: 20px;
-    background-color: black;
-    color: white;
-    overflow: hidden;
-}
-.contact img{
-    margin-top: 20px;
-    width: 15rem;
-}
-
-div.container.brief {
-    width: 100%;
-    height: 100px;
-    flex-direction: row;
-}
-.contact span p{
-    width: 70%;
-    font-variant: small-caps;
-    font-size: 1.2rem;
-    font-weight: 200;
-    margin-bottom: 0px;
-    letter-spacing: .2rem;
-    text-align: center;
-}
-
-.contact h1 {
-    margin-top: 20px;
-    width: 100%;
-    font-size: 4rem;
-    text-align: center;
-    text-transform: uppercase;
-    font-weight: 600;
-    letter-spacing: .1rem;
-}
-
-.project-modal {
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    /* display: none;*/
-    width: 0%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
-    overflow-x: hidden;
-    transition: 0.5s;
-}
-
-.modal-content {
-    background-color: white;
-    position: relative;
-    overflow: auto;
-    width: 80%;
-    height: 35rem;
-    margin: 15% auto;
-    padding: 20px;
-    border-style: solid black .2rem;
-    width: 80%;
-}
-
-.modal-content h1 {
-    margin: 0 auto;
-    font-weight: 400px;
-    margin-top: 2rem;
-    text-align: center;
-}
-
-.modal-content p {
-    margin: 0 auto;
-    text-align: center;
-    font-weight: 200;
-    width: 80%;
-    letter-spacing: .2rem;
-    margin-bottom: 3rem;
-}
-
-.close {
-    color: WhiteSmoke;
-    float: right;
-    margin-right: 5%;
-    font-size: 5rem;
-    font-weight: bold;
-}
-
-.front-end {
-    display: none;
-    flex-direction: column;
-}
-
-div.container.individual-project {
-    flex-direction: row;
-    display: inline-flex;
-    padding-bottom: 2rem;
-    margin-bottom: 2rem;
-    border-bottom: solid Grey .1rem;
-}
-
-.individual-project img {
-    width: 40%;
-    position: relative;
-}
-
-.individual-project span {
-    float: left;
-    width: 50%;
-    margin-left: 10px;
-    flex-direction: column;
-}
-
-.individual-project span a {
-    width: 50px;
-}
-
-.individual-project a img.icon {
-    width: 35px;
-    border-radius: 100%;
-    background-color: black;
-}
-div.icon-container{
-    display: inline-flex;
-}
-
-.individual-project span h1 {
-    margin: 0 auto;
-    font-size: 1.3rem;
-    margin-bottom: 5px;
-    font-weight: 400;
-}
-
-.individual-project span h4 {
-    height: 30px;
-    flex-wrap: wrap;
-}
-
-.individual-project span p {
-    font-size: .9rem;
-}
-
-embed{
-    margin-top: -5rem;
-    width: 400px;
-    height: 400px;
-    outline: none;
-}
-
-.full-stack {
-    display: none;
-}
-
-.react {
-    display: none;
-}
-
-.express {
-    display: none;
-}
-
-@media screen and (max-width: 768px) {
-    .top-nav a:not(:first-child) {
-        display: none;
+    #main h2 {
+        text-align: center;
+        border-bottom: solid Silver .1rem;
+        margin-bottom: 0px;
+        letter-spacing: .5rem;
+        line-height: 3rem;
+        font-weight: 400;
     }
-    .top-nav a.icon {
+
+    #main h1 {
+        font-weight: 300;
+        line-height: 2rem;
+        margin-top: .3rem;
+        color: Maroon;
+        margin-bottom: -10px;
+    }
+
+    div.container.brief {
+        width: 100%;
+        height: 100px;
+        flex-direction: row;
+    }
+
+    #main button {
+        width: 15rem;
+        height: 50px;
+        background: none;
+        color: Grey;
+        font-variant: small-caps;
+        font-weight: 400;
+        margin-bottom: 0px;
+        letter-spacing: .2rem;
+        border: solid Silver.3rem;
+    }
+    /*make each section visible when scroll*/
+
+    section {
+        opacity: 0;
+        transition: opacity 1s;
+    }
+
+    section.visible {
+        opacity: 1;
+    }
+    /*project*/
+
+    div .container.skills {
+        flex-direction: row;
+        align-items: baseline;
+        overflow: hidden;
+    }
+
+    span .container {
+        flex-direction: row;
+        display: inline-flex;
+    }
+
+
+    div.left {
+        width: 100%;
+        flex-direction: column;
+        padding-bottom: 2rem;
+        background-color: black;
+        float: left;
+        color: white;
+    }
+
+    .left p,
+    h1 {
+        width: 80%;
+        margin-top: 4rem;
+        text-align: center;
+        font-variant: small-caps;
+        font-weight: 200;
+        margin-bottom: 0px;
+        letter-spacing: .1rem;
+    }
+
+    .left h1 {
+        margin-top: 0px;
+    }
+
+    .brief button {
+        background-color: transparent;
+        border: none;
+    }
+
+
+    .skill {
+        font-variant: small-caps;
+        flex-direction: row;
+        width: 100%;
+        height: 40rem;
+    }
+
+    .skill div:nth-child(even) {
+        background-color: transparent;
+        color: black;
+        text-align: center;
+        font-size: .9rem;
+    }
+
+    div.sub-skill {
+        background-color: Maroon;
+        align-items: center;
+        width: 40%;
+        height: 100px;
+        color: white;
+        margin-top: 10px;
+    }
+
+    .sub-skill ul {
+        list-style: none;
+        list-style-position: inside;
+        margin: 0;
+        padding: 0;
+    }
+
+    .project-title {
+        flex-direction: row;
+        overflow: hidden;
+        border-bottom: solid white .1rem;
+        background-color: transparent;
+    }
+
+    .project-title h1 {
+        margin: 0 auto;
+        color: Maroon;
+        font-size: 4rem;
+        text-align: center;
+        text-transform: uppercase;
+        font-weight: 600;
+        letter-spacing: .1rem;
+    }
+
+    div .container.portafolio {
+        flex-direction: row;
+        width: 100%;
+        height: 30rem;
+    }
+
+    div.container.portafolio div:nth-child(odd) {
+        background-color: rgba(255, 204, 204, 0.1);
+        border-right: solid white .02rem;
+        border-left: solid white .02rem;
+    }
+
+    div.project {
+        flex-direction: column;
+        width: 20%;
+        height: 15rem;
+        margin-left: 10px;
+    }
+
+    .project img {
+        width: 30px;
+        margin-bottom: 0px;
+    }
+
+    .project h1 {
+        font-size: 1rem;
+        font-weight: 400;
+        height: 20px;
+        margin-top: 10px;
+        margin-bottom: 20px;
+        text-transform: uppercase;
+    }
+
+    .project p {
+        width: 80%;
+        height: 50px;
+        margin-bottom: 40px;
+        font-size: .9rem;
+        text-align: center;
+        font-variant: small-caps;
+        font-weight: 200;
+        letter-spacing: .1rem;
+    }
+
+    .project button {
+        background-color: transparent;
+        border-radius: 80%;
+        width: 30px;
+        height: 30px;
+        border-style: solid black 3rem;
+        margin-top: 40px;
+    }
+
+    .contact {
+        margin-top: 20px;
+        background-color: black;
+        color: white;
+        overflow: hidden;
+    }
+
+    .contact img {
+        margin-top: 20px;
+        width: 15rem;
+    }
+
+    div.container.brief {
+        width: 100%;
+        height: 100px;
+        flex-direction: row;
+    }
+
+    .contact span p {
+        width: 70%;
+        font-variant: small-caps;
+        font-size: 1.2rem;
+        font-weight: 200;
+        margin-bottom: 0px;
+        letter-spacing: .2rem;
+        text-align: center;
+    }
+
+    .contact h1 {
+        margin-top: 20px;
+        width: 100%;
+        font-size: 4rem;
+        text-align: center;
+        text-transform: uppercase;
+        font-weight: 600;
+        letter-spacing: .1rem;
+    }
+
+    .project-modal {
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        /* display: none;*/
+        width: 0%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgb(0, 0, 0);
+        background-color: rgba(0, 0, 0, 0.4);
+        overflow-x: hidden;
+        transition: 0.5s;
+    }
+
+    .modal-content {
+        background-color: white;
+        position: relative;
+        overflow: auto;
+        width: 80%;
+        height: 35rem;
+        margin: 15% auto;
+        padding: 20px;
+        border-style: solid black .2rem;
+        width: 80%;
+    }
+
+    .modal-content h1 {
+        margin: 0 auto;
+        font-weight: 400px;
+        margin-top: 2rem;
+        text-align: center;
+    }
+
+    .modal-content p {
+        margin: 0 auto;
+        text-align: center;
+        font-weight: 200;
+        width: 80%;
+        letter-spacing: .2rem;
+        margin-bottom: 3rem;
+    }
+
+    .close {
+        color: WhiteSmoke;
         float: right;
-        display: block;
+        margin-right: 5%;
+        font-size: 5rem;
+        font-weight: bold;
     }
-    .top-nav.responsive {
-        margin-bottom: -20px;
+
+    .front-end {
+        display: none;
+        flex-direction: column;
+    }
+
+    div.container.individual-project {
+        flex-direction: row;
+        display: inline-flex;
+        padding-bottom: 2rem;
+        margin-bottom: 2rem;
+        border-bottom: solid Grey .1rem;
+    }
+
+    .individual-project img {
+        width: 40%;
         position: relative;
     }
-    .top-nav.responsive .icon {
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-    .top-nav.responsive a {
-        float: none;
-        display: block;
-        text-align: left;
-    }
-    div.container.brief {
-        width: 90%;
-    }
-    .left h1 {
-        width: 100%;
-    }
-    div.container.project {
-        width: 23%;
-        margin-left: 1px;
-    }
-    .skill div:nth-child(odd) {
-        font-size: .8rem;
-    }
-}
 
-@media screen and (max-width: 375px) {
-    div.container.project {
-        width: 24.5%;
-        margin-left: 1px;
+    .individual-project span {
+        float: left;
+        width: 50%;
+        margin-left: 10px;
+        flex-direction: column;
     }
 
-    .main h2{
-        width: auto;
+    .individual-project span a {
+        width: 50px;
     }
-    .close {
-        margin-right: 10%!important;
-        font-size: 5rem !important;
-        ;
-    }
-    embed{
-        width: 200px;
-    }
-}
 
-@media only screen and (min-device-pixel-ratio: 1.5)(-o-min-device-pixel-ratio: 3/2),
-(-webkit-min-device-pixel-ratio: 1.5),
-(min-device-pixel-ratio: 1.5) {
-    .brief img {
-        width: 40px;
-        margin-left: 1rem;
+    .individual-project a img.icon {
+        width: 35px;
+        border-radius: 100%;
+        background-color: black;
     }
-    .individual-project img {
-        max-width: 80%;
+
+    div.icon-container {
+        display: inline-flex;
     }
-}
+
+    .individual-project span h1 {
+        margin: 0 auto;
+        font-size: 1.3rem;
+        margin-bottom: 5px;
+        font-weight: 400;
+    }
+
+    .individual-project span h4 {
+        height: 30px;
+        flex-wrap: wrap;
+    }
+
+    .individual-project span p {
+        font-size: .9rem;
+    }
+
+    embed {
+        margin-top: -5rem;
+        width: 400px;
+        height: 400px;
+        outline: none;
+    }
+
+    .full-stack {
+        display: none;
+    }
+
+    .react {
+        display: none;
+    }
+
+    .express {
+        display: none;
+    }
+
+
+
+    @media screen and (max-width: 768px) {
+        .top-nav a {
+            display: none;
+        }
+
+        /*top-nav icon */
+        div .icon {
+            float: right;
+            margin: 1rem;
+            display: block;
+            display: inline-block;
+        }
+        .bar1,
+        .bar2,
+        .bar3 {
+            width: 30px;
+            height: 5px;
+            background-color: black;
+            margin: 6px 0;
+            transition: 0.4s;
+        }
+        .change .bar1 {
+            -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+            transform: rotate(-45deg) translate(-9px, 6px);
+        }
+        .change .bar2 {
+            opacity: 0;
+        }
+        .change .bar3 {
+            -webkit-transform: rotate(45deg) translate(-8px, -8px);
+            transform: rotate(45deg) translate(-8px, -8px);
+        }
+        .top-nav.responsive {
+            margin-bottom: -20px;
+            position: fixed;
+            z-index: 1;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            overflow: auto;
+            overflow-x: hidden;
+        }
+        .top-nav.responsive .icon {
+            position: absolute;
+            right: 0;
+            top: 0;
+        }
+        .top-nav.responsive a {
+            float: none;
+            display: block;
+        }
+        div.project{
+            margin-top: 2rem;
+            width: 40%;
+        }
+        div .modal-container {
+            display: none;
+            height: 20rem;
+            background-color: white;
+            position: relative;
+            overflow: auto;
+            width: 80%;
+            height: 25rem;
+            margin: 20% auto;
+            padding: 20px;
+            border-style: solid black .2rem;
+            width: 80%;
+        }
+        .modal-container a {
+            margin-top: 20px;
+            align-self: center;
+            color: black;
+        }
+        .close {
+            margin-right: 10%!important;
+            font-size: 5rem !important;
+            ;
+        }
+        div.container.portafolio{
+            margin-bottom: 5rem;
+        }
+        embed {
+            width: 200px;
+        }
+    }
+
+
+    @media only screen and (min-device-pixel-ratio: 1.5)(-o-min-device-pixel-ratio: 3/2),
+    (-webkit-min-device-pixel-ratio: 1.5),
+    (min-device-pixel-ratio: 1.5) {
+        .brief img {
+            width: 40px;
+            margin-left: 1rem;
+        }
+        .individual-project img {
+            max-width: 80%;
+        }
+    }
