--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@
 
     html {
         font: 14px;
-        font-family: 'Concert One', cursive;
-        font-weight: 400;
+ font-family: 'Open Sans', sans-serif;        font-weight: 400;
         background-color: white;
         font-variant: small-caps;
     }
