--- a/style.css
+++ b/style.css
@@ -25,9 +25,10 @@
         align-items: center;
         justify-content: center;
     }
-#mainWrap{
-    display:flex;
-}
+
+    #mainWrap {
+        display: flex;
+    }
 
     /*parallax*/
 
@@ -401,106 +402,94 @@
 
 
     @media screen and (max-width: 768px) {
-    /*top nav */
+        /*top nav */
+        #topNav {
+            position: fixed;
+            overflow: hidden;
+        }
 
-    #topNav {
-        /*  z-index: 99;
-    background: pink;*/
-        position: fixed;
-        overflow: hidden;
-    }
-/*
-    .navbar {
-        height: 10rem;
-        width: 3rem;
-    }*/
 
-    a {
-        text-decoration: none;
-    }
-    /*check what i can do with this*/
+        a {
+            text-decoration: none;
+        }
+        /*check what i can do with this*/
+        .navbar.responsive {
+            background-color: #000;
+            width: 100%;
+            height: 100vh;
+        }
 
-    .navbar.responsive {
-        background-color: #000;
-        width: 100%;
-        height: 100vh;
-    }
+        .navbar.responsive .bar1 {
+            background: #FFF;
+        }
 
-    .navbar.responsive .bar1 {
-        background: #FFF;
-    }
+        .navbar.responsive .bar3 {
+            background: #FFF;
+        }
+        /*nav icon  open close*/
+        .icon {
+            margin: 1rem;
+            display: block;
+        }
 
-    .navbar.responsive .bar3 {
-        background: #FFF;
-    }
-    /*nav icon  open close*/
+        .bar1,
+        .bar2,
+        .bar3 {
+            width: 30px;
+            height: 2px;
+            background: #000;
+            margin: 6px 0;
+            transition: 0.4s;
+        }
+        /*bar change when click */
+        .change .bar1 {
+            -webkit-transform: rotate(-20deg) translate(-9px, 6px);
+            transform: rotate(-40deg) translate(-2px, 6px);
+        }
 
-    .icon {
-        margin: 1rem;
-        display: block;
-    }
+        .change .bar2 {
+            opacity: 0;
+        }
 
-    .bar1,
-    .bar2,
-    .bar3 {
-        width: 30px;
-        height: 2px;
-        background: #000;
-        margin: 6px 0;
-        transition: 0.4s;
-    }
-    /*bar change when click */
+        .change .bar3 {
+            -webkit-transform: rotate(45deg) translate(-8px, -8px);
+            transform: rotate(40deg) translate(-5px, -8px);
+        }
+        /*nav bar toogle chem click*/
+        #innerNav {
+            display: none;
+            position: fixed;
+            z-index: 10;
+            top: 0;
+            left: 0;
+            background-color: black;
+        }
 
-    .change .bar1 {
-        -webkit-transform: rotate(-20deg) translate(-9px, 6px);
-        transform: rotate(-40deg) translate(-2px, 6px);
-    }
+        .inner-nav {
+            margin-top: 3rem;
+            width: 100%;
+            height: 40rem;
+        }
 
-    .change .bar2 {
-        opacity: 0;
-    }
+        .social-icons {
+            width: 2.5rem;
+            margin-left: 1rem;
+        }
+        /* nav bar navegation content*/
+        .content {
+            margin-left: 2rem;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding-top: 2rem;
+        }
 
-    .change .bar3 {
-        -webkit-transform: rotate(45deg) translate(-8px, -8px);
-        transform: rotate(40deg) translate(-5px, -8px);
-    }
-    /*nav bar toogle chem click*/
-
-    #innerNav {
-        display: none;
-        position: fixed;
-        z-index: 10;
-        top: 0;
-        left: 0;
-        background-color: black;
-    }
-
-    .inner-nav {
-        margin-top: 3rem;
-        width: 100%;
-        height: 40rem;
-    }
-
-    .social-icons {
-        width: 2.5rem;
-        margin-left: 1rem;
-    }
-    /* nav bar navegation content*/
-
-    .content {
-        margin-left: 2rem;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding-top: 2rem;
-    }
-
-    .content a {
-        color: #FFF;
-        margin-top: 1rem;
-        text-transform: uppercase;
-    }
+        .content a {
+            color: #FFF;
+            margin-top: 1rem;
+            text-transform: uppercase;
+        }
 
 
         div.project {
@@ -541,6 +530,11 @@
         }
     }
 
+@media only screen and(max-width:1600px){
+    div#topNav.navbar{
+        display: none;
+    }
+}
 
     @media only screen and (min-device-pixel-ratio: 1.5)(-o-min-device-pixel-ratio: 3/2),
     (-webkit-min-device-pixel-ratio: 1.5),
