--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@
     #mainWrap {
         display: flex;
     }
-
     /*parallax*/
 
     #parallax {
@@ -399,10 +398,16 @@
         display: none;
     }
 
+    div#topNav.navbar {
+        display: none;
+    }
 
 
     @media screen and (max-width: 768px) {
         /*top nav */
+        div#topNav.navbar {
+            display: block;
+        }
         #topNav {
             position: fixed;
             overflow: hidden;
@@ -529,12 +534,6 @@
             width: 200px;
         }
     }
-
-@media only screen and(max-width:1600px){
-    div#topNav.navbar{
-        display: none;
-    }
-}
 
     @media only screen and (min-device-pixel-ratio: 1.5)(-o-min-device-pixel-ratio: 3/2),
     (-webkit-min-device-pixel-ratio: 1.5),
