--- a/style.scss
+++ b/style.scss
@@ -508,7 +508,8 @@ nav {
             overflow: hidden;
 
             img {
-                max-width: 80%;
+                    max-width: 100%;
+                    margin-top: 3rem;
             }
 
             p {
