--- a/stylesheets/generale.scss
+++ b/stylesheets/generale.scss
@@ -11,7 +11,7 @@ html{
 	    overflowY: hidden;
 }
 
-.container{
+.main-container{
 	@include flexbox;
 	flex-direction:column;
 	justify-content:center;
